--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<section class="hero">
 		<div class="background-image"></div>
-		<div class="">
+		<div class="hero-content-area">
 			<h1>Mountain Travel</h1>
 			<h3>Unmissable Adventure Tours Around The World</h3>
 			<a href="#" class="btn">Contact Us Now</a>
