--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mountain Travel</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -24,6 +25,50 @@
 			<h3>Unmissable Adventure Tours Around The World</h3>
 			<a href="#" class="btn">Contact Us Now</a>
 		</div>
+	</section>
+
+	<section class="destinations">
+		<h3 class="title">Some of our destinations:</h3>
+		<p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures.
+		Here are some pictures from people who have had elevated experiences with is.</p>
+		<hr>
+
+	<ul class="grid">
+		<li class="small"></li>
+		<li class="large"></li>
+		<li class="large"></li>
+		<li class="small"></li>
+	</ul>
+	</section>
+
+	<section class="packages">
+		<h3 class="title">Tour Packages:</h3>
+		<p>Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures.
+		Here are some pictures from people who have had elevated experiences with is.</p>
+		<hr>
+
+	<ul class="grid">
+		<li>
+			<i class="far fa-compass fa-4x"></i>
+			<h4>Guided Trips</h4>
+			<p>Bacon ipsum dolor amet cow sirloin beef, shank kielbasa rump fatback. Turkey ball tip shankle leberkas, corned beef venison tongue ribeye biltong.</p>
+		</li>
+		<li>
+			<i class="fas fa-camera-retro fa-4x"></i>
+			<h4>Photo Trips</h4>
+			<p>Pig picanha tail pork chop, cow ball tip flank andouille pastrami ham hock. Meatball tri-tip chicken pork chop capicola turkey. T-bone brisket tongue chuck, rump short.</p>
+		</li>
+		<li>
+			<i class="fas fa-bicycle fa-4x"></i>
+			<h4>Biking Trips</h4>
+			<p>Kevin ham hock shoulder jerky chicken pork loin pig t-bone rump spare ribs shank venison landjaeger pastrami short loin. Pork belly drumstick ham hock tenderloin.</p>
+		</li>
+		<li>
+			<i class="fas fa-flag-checkered fa-4x"></i>
+			<h4>Racing Trips</h4>
+			<p>Prosciutto tongue tail frankfurter t-bone shank short loin pork belly picanha biltong. Porchetta turducken corned beef ribeye bacon fatback.</p>
+		</li>
+	</ul>
 	</section>
 </body>
 </html>
