--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<header>
 		<h2><a href="">Mountain Travel</a></h2>
 		<nav>
-			<li><a href="">Tours</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Contact</a></li>
+			<li><a href="#">Tours</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
 		</nav>
 	</header>
 
