--- a/index.html
+++ b/index.html
@@ -70,5 +70,40 @@
 		</li>
 	</ul>
 	</section>
+
+	<section class="testimonials">
+		<h3 class="title">Testimonials from our adventures:</h3>
+		<hr>
+		<p class="quote">Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures.
+		Here are some pictures from people who have had elevated experiences with is.</p>
+		<p class="author">- Leslie Simon</p>
+		<p class="quote">Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures.
+		Here are some pictures from people who have had elevated experiences with is.</p>
+		<p class="author">- Mark Garrett</p>
+		<p class="quote">Tired of the ocean? Are the plains too plain? Come along with us on one of our mountain adventures.
+		Here are some pictures from people who have had elevated experiences with is.</p>
+		<p class="author">- Curtis Mason</p>
+	</section>
+
+	<section class="contact">
+		<h3 class="title">Learn more</h3>
+		<p>Andouille burgdoggen turkey cupim jerky beef shoulder chicken. Short ribs bresaola tenderloin pork tail pork belly. Jowl ground round short loin, buffalo flank short ribs burgdoggen andouille ham pig pork. Flank corned beef pork loin leberkas, landjaeger beef capicola andouille ham.</p>
+		<hr>
+		<form>
+			<input type="email" name="" placeholder="Email">
+			<a href="#" class="btn">Subscribe now</a>
+		</form>
+	</section>
+
+	<footer>
+		<p>Images courtesy of <a href="http://unsplash.com"></a>unsplash</p>
+		<p>Why are you reading this?! There's never anything interesting in the footer!.</p>
+		<ul>
+			<li><a href="#"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+			<li><a href="#"><i class="fab fa-facebook-square fa-2x"></i></i></a></li>
+			<li><a href="#"><i class="fab fa-snapchat-square fa-2x"></i></i></a></li>
+		</ul>
+	</footer>
+
 </body>
 </html>
